# dbt-snowflake-streams-tasks

./: .gitignore  LICENSE  README.md  pyproject.toml  run_test.sh
.github/: CODEOWNERS
integration_tests/: dbt_project.yml  package-lock.yml  profiles.yml  test.env.sample  vars.env.sample
integration_tests/macros/: insert_data.sql  prep_structure.sql
integration_tests/models/customers/: _models.yml  _sources.yml  stream_from_source.sql
macros/helpers/: create_stream.sql  create_table.sql  create_task.sql  stream.sql
macros/materializations/: stream_task.sql
sample_models/: customers.sql  customers.yml
