[project]
name = "dbt-snowflake-streams-tasks"
version = "0.1.0"
description = "A DBT Plugin that allows creating models using streams and tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.9.0",
    "dbt-core>=1.9.1",
    "dbt-redshift>=1.9.0",
    "dbt-snowflake>=1.9.0",
    "dbt-synapse>=1.8.2",
    "tox>=4.23.2",
]
